--- a/MvcUI/Web.config
+++ b/MvcUI/Web.config
@@ -52,4 +52,8 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
+	<connectionStrings>
+		<add name="Context" connectionString="Data Source=DESKTOP-HNE43R2;Initial Catalog=dbMVC;integrated Security=True;" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 </configuration>
