Modellere yeni sütunlar eklendi

--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\202203240708545_m1.designer.cs">
       <DependentUpon>202203240708545_m1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202203300835283_mig1.cs" />
+    <Compile Include="Migrations\202203300835283_mig1.designer.cs">
+      <DependentUpon>202203300835283_mig1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -76,6 +80,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202203240708545_m1.resx">
       <DependentUpon>202203240708545_m1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202203300835283_mig1.resx">
+      <DependentUpon>202203300835283_mig1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
