--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -74,6 +74,14 @@
     <Compile Include="Migrations\202203300835283_mig1.designer.cs">
       <DependentUpon>202203300835283_mig1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202204071835151_mig_writer_edit.cs" />
+    <Compile Include="Migrations\202204071835151_mig_writer_edit.designer.cs">
+      <DependentUpon>202204071835151_mig_writer_edit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202204071905001_mig_writertitle_add.cs" />
+    <Compile Include="Migrations\202204071905001_mig_writertitle_add.designer.cs">
+      <DependentUpon>202204071905001_mig_writertitle_add.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -93,6 +101,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202203300835283_mig1.resx">
       <DependentUpon>202203300835283_mig1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204071835151_mig_writer_edit.resx">
+      <DependentUpon>202204071835151_mig_writer_edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204071905001_mig_writertitle_add.resx">
+      <DependentUpon>202204071905001_mig_writertitle_add.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
