--- a/MvcUI/Web.config
+++ b/MvcUI/Web.config
@@ -57,7 +57,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="Context" connectionString="Data Source=DESKTOP-HNE43R2;Initial Catalog=dbMVC;integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Context" connectionString="Data Source=.;Initial Catalog=dbMVC;integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
