--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -86,6 +86,10 @@
     <Compile Include="Migrations\202204082238061_mig_Writerupdated.designer.cs">
       <DependentUpon>202204082238061_mig_Writerupdated.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202204091051089_mg_writer_addstatus.cs" />
+    <Compile Include="Migrations\202204091051089_mg_writer_addstatus.designer.cs">
+      <DependentUpon>202204091051089_mg_writer_addstatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -114,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202204082238061_mig_Writerupdated.resx">
       <DependentUpon>202204082238061_mig_Writerupdated.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204091051089_mg_writer_addstatus.resx">
+      <DependentUpon>202204091051089_mg_writer_addstatus.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
