--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Abstract\IContactDal.cs" />
     <Compile Include="Abstract\IContentDal.cs" />
     <Compile Include="Abstract\IHeadingDal.cs" />
+    <Compile Include="Abstract\IImageFileDal.cs" />
     <Compile Include="Abstract\IMessageDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWriterDal.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="EntityFramework\EfContactDal.cs" />
     <Compile Include="EntityFramework\EfContentDal.cs" />
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
+    <Compile Include="EntityFramework\EfImageFileDal.cs" />
     <Compile Include="EntityFramework\EfMessageDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
     <Compile Include="Migrations\202203240708545_m1.cs" />
@@ -103,6 +105,14 @@
     <Compile Include="Migrations\202204132328251_mig_add_message_class.cs" />
     <Compile Include="Migrations\202204132328251_mig_add_message_class.designer.cs">
       <DependentUpon>202204132328251_mig_add_message_class.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202204192304567_contact_adddate.cs" />
+    <Compile Include="Migrations\202204192304567_contact_adddate.designer.cs">
+      <DependentUpon>202204192304567_contact_adddate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202204200015305_mig_addimage_file.cs" />
+    <Compile Include="Migrations\202204200015305_mig_addimage_file.designer.cs">
+      <DependentUpon>202204200015305_mig_addimage_file.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -144,6 +154,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202204132328251_mig_add_message_class.resx">
       <DependentUpon>202204132328251_mig_add_message_class.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204192304567_contact_adddate.resx">
+      <DependentUpon>202204192304567_contact_adddate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204200015305_mig_addimage_file.resx">
+      <DependentUpon>202204200015305_mig_addimage_file.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
