Admin rolleri ve Login işlemleri için ayarlar yapıldı.

--- a/MvcUI/Web.config
+++ b/MvcUI/Web.config
@@ -20,6 +20,17 @@
 	  </customErrors>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+  
+	<authentication mode="Forms">
+		<forms loginUrl="/Login/Index"></forms>
+	</authentication>
+	  
+	  <roleManager enabled="true" defaultProvider="TestRoleProvider">
+		  <providers>
+			  <add name="TestRoleProvider" type="MvcUI.Roles.AdminRolesProvider"/>
+		  </providers>
+	  </roleManager>
+	
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
