--- a/MvcUI/Web.config
+++ b/MvcUI/Web.config
@@ -15,14 +15,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-	  <customErrors mode="On">
+	  <!--<customErrors mode="On">
 		  <error statusCode="404" redirect="/ErrorPage/Page404/"/>
-	  </customErrors>
+	  </customErrors>-->
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   
 	<authentication mode="Forms">
-		<forms loginUrl="/Login/Index"></forms>
+		<forms loginUrl="/Login/WriterLogin/"></forms>
 	</authentication>
 	  
 	  <roleManager enabled="true" defaultProvider="TestRoleProvider">
