--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Abstract\IHeadingDal.cs" />
     <Compile Include="Abstract\IImageFileDal.cs" />
     <Compile Include="Abstract\IMessageDal.cs" />
+    <Compile Include="Abstract\IProjectPicturesDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWriterDal.cs" />
     <Compile Include="Concrete\Context.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
     <Compile Include="EntityFramework\EfImageFileDal.cs" />
     <Compile Include="EntityFramework\EfMessageDal.cs" />
+    <Compile Include="EntityFramework\EfProjectPicturesDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
     <Compile Include="Migrations\202203240708545_m1.cs" />
     <Compile Include="Migrations\202203240708545_m1.designer.cs">
@@ -117,6 +119,10 @@
     <Compile Include="Migrations\202204212011544_mig-admin_table.cs" />
     <Compile Include="Migrations\202204212011544_mig-admin_table.designer.cs">
       <DependentUpon>202204212011544_mig-admin_table.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205031700547_Project_Pictures_Add.cs" />
+    <Compile Include="Migrations\202205031700547_Project_Pictures_Add.designer.cs">
+      <DependentUpon>202205031700547_Project_Pictures_Add.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -167,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202204212011544_mig-admin_table.resx">
       <DependentUpon>202204212011544_mig-admin_table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205031700547_Project_Pictures_Add.resx">
+      <DependentUpon>202205031700547_Project_Pictures_Add.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
