Proje fotoğrafları eklendi.

--- a/MvcUI/MvcUI.csproj
+++ b/MvcUI/MvcUI.csproj
@@ -347,11 +347,14 @@
     <Content Include="AdminLTE-3.0.4\Image\Adsız7.png" />
     <Content Include="AdminLTE-3.0.4\Image\Adsız8.png" />
     <Content Include="AdminLTE-3.0.4\Image\Adsız9.png" />
+    <Content Include="AdminLTE-3.0.4\Image\DB Schema.jpg" />
     <Content Include="AdminLTE-3.0.4\Image\DicleKANAT.jpeg" />
     <Content Include="AdminLTE-3.0.4\Image\Enes.jpg" />
     <Content Include="AdminLTE-3.0.4\Image\Ezgi.JPG" />
+    <Content Include="AdminLTE-3.0.4\Image\HomePage - P2.jpg" />
     <Content Include="AdminLTE-3.0.4\Image\kerem.jpg" />
     <Content Include="AdminLTE-3.0.4\Image\okan.jpg" />
+    <Content Include="AdminLTE-3.0.4\Image\Schema.jpg" />
     <Content Include="AdminLTE-3.0.4\Image\SemanurMutlu.jpeg" />
     <Content Include="AdminLTE-3.0.4\Image\tugba.jpeg" />
     <Content Include="AdminLTE-3.0.4\Image\Tuğçe Gültekin.jpg" />
