Proje fotoğrafları eklendi

--- a/MvcUI/MvcUI.csproj
+++ b/MvcUI/MvcUI.csproj
@@ -354,6 +354,7 @@
     <Content Include="AdminLTE-3.0.4\Image\Ezgi.JPG" />
     <Content Include="AdminLTE-3.0.4\Image\HomePage - P2.jpg" />
     <Content Include="AdminLTE-3.0.4\Image\kerem.jpg" />
+    <Content Include="AdminLTE-3.0.4\Image\NLayered Architecture.jpg" />
     <Content Include="AdminLTE-3.0.4\Image\okan.jpg" />
     <Content Include="AdminLTE-3.0.4\Image\Schema.jpg" />
     <Content Include="AdminLTE-3.0.4\Image\SemanurMutlu.jpeg" />
